--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ ul,
 ol {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 img {
@@ -52,4 +53,5 @@ textarea {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
